@@ -1,4 +1,5 @@
 - Fix loading of TinyMCE RTE, causing it to be initialised without configuration [#122]
+- Add ClientConfig_ConfigChange event to be able of hooking into configuration changes [#117]
 
 ++ ClientConfig 1.3.2-pl
 ++ Released on 2015-12-09
